--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          navigator.serviceWorker.register('./sw.js')
-            .then(reg => console.log('SW registered'))
+          navigator.serviceWorker.register('/sw.js')
+            .then(reg => console.log('SW registered', reg.scope))
             .catch(err => console.log('SW fail', err));
         });
       }
